[package]
name = "kvarn-search"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Search engine extension for Kvarn"
readme = "README.md"
homepage = "https://kvarn.org/search."
repository = "https://github.com/Icelk/kvarn-search/"
license = "LGPL-3.0-or-later"
keywords = ["search", "search-engine", "fulltext"]
categories = ["algorithms", "caching"]

[dependencies]
futures = "^0.3"
kvarn = { path = "../kvarn", default-features = false }
notify = "5.0.0-pre.13"
scraper = "^0.12"
elipdotter = { path = "../elipdotter" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", default-features = false, features = ["sync"] }
walkdir = "^2"
roxmltree = { version = "^0.14", optional = true }

[features]
wordpress-sitemap = ["roxmltree"]
