[package]
name = "kvarn-search"
version = "0.4.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Search engine extension for Kvarn"
readme = "README.md"
homepage = "https://kvarn.org/search."
repository = "https://github.com/Icelk/kvarn-search/"
license = "LGPL-3.0-or-later"
keywords = ["search", "search-engine", "fulltext"]
categories = ["algorithms", "caching"]

[dependencies]
kvarn = { version = "0.5", path = "../kvarn", default-features = false }
notify = "5"
scraper = "0.13"
elipdotter = "=0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.20", default-features = false, features = ["sync"] }
walkdir = "2"
sitemap-iter = { version = "0.1", optional = true }
percent-encoding = "2"

[features]
wordpress-sitemap = ["sitemap-iter"]
